// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ToolGroupMessage /> > Border Color Logic > uses gray border when all tools are successful and no shell commands 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│✓  another-tool  A tool for testing                                           │
│Press Ctrl+O to show full tool output                                         │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Border Color Logic > uses yellow border for shell commands even when successful 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│✓  run_shell_command  A tool for testing                                      │
│Press Ctrl+O to show full tool output                                         │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Border Color Logic > uses yellow border when tools are pending 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│o  test-tool  A tool for testing                                              │
│Press Ctrl+O to show full tool output                                         │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Confirmation Handling > shows confirmation dialog for first confirming tool only 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│MockTool[tool-1]: ? first-confirm - A tool for testing (high)                 │
│MockConfirmation: Confirm first tool                                          │
│                                                                              │
│MockTool[tool-2]: ? second-confirm - A tool for testing (low)                 │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders empty tool calls array 1`] = `""`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders mixed tool calls including shell command 1`] = `
"
  ERROR  useStreamingContext must be used within a StreamingContextProvider

 packages/cli/src/ui/contexts/StreamingContext.tsx:17:11

 14: export const useStreamingContext = (): StreamingState => {
 15:   const context = React.useContext(StreamingContext);
 16:   if (context === undefined) {
 17:     throw new Error(
 18:       'useStreamingContext must be used within a StreamingContextProvider',
 19:     );
 20:   }

 - useStreamingContext (packages/cli/src/ui/contexts/StreamingContext.tsx:17:11)
 - GeminiRespondingSpinner (packages/cli/src/ui/components/GeminiRespondingSpinner.tsx:31:26)
 -Object.react-stack-bottom-fr (node_modules/react-reconciler/cjs/react-reconciler.development.js:1
  me                          5859:20)
 - renderWithHooks (node_modules/react-reconciler/cjs/react-reconciler.development.js:3221:22)
 -updateFunctionComponent (node_modules/react-reconciler/cjs/react-reconciler.development.js:6475:1
                         9)
 - beginWork (node_modules/react-reconciler/cjs/react-reconciler.development.js:8009:18)
 - runWithFiberInDEV (node_modules/react-reconciler/cjs/react-reconciler.development.js:1738:13)
 - performUnitOfWork (node_modules/react-reconciler/cjs/react-reconciler.development.js:12834:22)
 - workLoopSync (node_modules/react-reconciler/cjs/react-reconciler.development.js:12644:41)
 - renderRootSync (node_modules/react-reconciler/cjs/react-reconciler.development.js:12624:11)
"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders multiple tool calls with different statuses 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│x  error-tool  This tool failed                                               │
│Press Ctrl+O to show full tool output                                         │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders shell command with yellow border 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│✓  run_shell_command  Execute shell command                                   │
│Press Ctrl+O to show full tool output                                         │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders single successful tool call 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│✓  test-tool  A tool for testing                                              │
│Press Ctrl+O to show full tool output                                         │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders tool call awaiting confirmation 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│MockTool[tool-confirm]: ? confirmation-tool - This tool needs confirmation    │
│(high)                                                                        │
│MockConfirmation: Are you sure you want to proceed?                           │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders when not focused 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│✓  test-tool  A tool for testing                                              │
│Press Ctrl+O to show full tool output                                         │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders with limited terminal height 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│✓  another-tool  Another tool                                                 │
│Press Ctrl+O to show full tool output                                         │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders with narrow terminal width 1`] = `
"╭──────────────────────────────────────╮
│✓  very-long-tool-name-that-might-wra…│
│Press Ctrl+O to show full tool output │
╰──────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Height Calculation > calculates available height correctly with multiple tools with results 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│✓  test-tool  A tool for testing                                              │
│Press Ctrl+O to show full tool output                                         │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;
